--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=test
 
 spring.jpa.open-in-view=false
 jwt.secret=oq0jpCjB2VgpHp4s
-jwt.expiration=180000
+jwt.expiration=86400000
 
